PuntoReciclajeController mocks